small fix in menu on mobile

--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -15,6 +15,11 @@
 			padding-bottom: 20px;
 			padding-top: 20px;
 		}
+		
+		@include media('<=xxs') {
+			padding-bottom: 10px;
+			padding-top: 10px;
+		}
 	}
 
 	&__logo {
@@ -39,8 +44,6 @@
 		left: -450px; top: 0;
 		max-width: 450px;
 		width: 100%;
-		padding: 75px 55px 30px;
-		margin: 0;
 		box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 		background: rgba(255, 255, 255, 0.7);
 		backdrop-filter: blur(7.5px);
